hphp/test/zend/bad/Zend/tests/closure_034.php
<?php

$a = function () use(&$a) {};
var_dump($a);

?>
===DONE===